// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return a configuration for Prettier 1`] = `
"module.exports = {
  arrowParens: 'avoid',
  endOfLine: 'auto',
  htmlWhitespaceSensitivity: 'ignore',
  printWidth: 120,
  singleQuote: true,
  tabWidth: 2,
  trailingComma: 'all'
}"
`;

exports[`should return a configuration for Prettier with Tailwind CSS 1`] = `
"module.exports = {
  arrowParens: 'avoid',
  endOfLine: 'auto',
  htmlWhitespaceSensitivity: 'ignore',
  printWidth: 120,
  singleQuote: true,
  tabWidth: 2,
  trailingComma: 'all',
  plugins: [
    'prettier-plugin-tailwindcss'
  ]
}"
`;

exports[`should return a configuration for Prettier with Tailwind CSS and Vue.js 1`] = `
"module.exports = {
  arrowParens: 'avoid',
  endOfLine: 'auto',
  htmlWhitespaceSensitivity: 'ignore',
  printWidth: 120,
  singleQuote: true,
  tabWidth: 2,
  trailingComma: 'all',
  plugins: [
    'prettier-plugin-tailwindcss'
  ],
  vueIndentScriptAndStyle: true
}"
`;

exports[`should return a configuration for Prettier with Vue.js 1`] = `
"module.exports = {
  arrowParens: 'avoid',
  endOfLine: 'auto',
  htmlWhitespaceSensitivity: 'ignore',
  printWidth: 120,
  singleQuote: true,
  tabWidth: 2,
  trailingComma: 'all',
  vueIndentScriptAndStyle: true
}"
`;
